# Platformer

./: .gitignore  CMakeLists.txt
headers/: collision.h  enemy.h  engine.h  game_object.h  movement.h  player.h  renderer.h  tilemap.h
sources/: collision.c  enemy.c  engine.c  game_object.c  main.c  movement.c  player.c  renderer.c  tilemap.c
src/: collision.c  main.c  player.c  renderer.c  tags
